# brainf

./: Makefile
examples/: helloworld.bf  input01  input02
src/haskell/: Brainfuck.hs  Main.hs  brainf.cabal
src/haskell/app/: Main.hs
src/haskell/src/: Brainfuck.hs
src/haskell/test/: Spec.hs
