name:                brainf
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ebergq/brainf#readme
license:             MIT
license-file:        LICENSE
author:              Eric Bergquist
maintainer:          eric.c.bergquist@gmail.com
copyright:           2016 Eric Bergquist
category:            Interpreter
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Brainfuck
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , parsec
                     , transformers
  default-language:    Haskell2010

executable brainf-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brainf
  default-language:    Haskell2010

test-suite brainf-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , brainf
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ebergq/brainf
